# measure_air_quality

./: Cargo.toml
src/: data.rs  main.rs  scd41.rs
